--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,21 @@
 asgiref==3.3.1
 backcall==0.2.0
+bootstrap4==0.1.0
+cent==4.0.1
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.7
+cryptography==35.0.0
 decorator==4.4.2
 Django==3.1.3
+django-resized==0.3.11
 Faker==4.14.2
 flake8==3.8.4
+idna==3.3
 ipython==7.19.0
 ipython-genutils==0.2.0
 jedi==0.17.2
+jwt==1.3.1
 mccabe==0.6.1
 parso==0.7.1
 pexpect==4.8.0
@@ -15,12 +24,15 @@ Pillow==8.0.1
 prompt-toolkit==3.0.8
 ptyprocess==0.6.0
 pycodestyle==2.6.0
+pycparser==2.21
 pyflakes==2.2.0
 Pygments==2.7.2
 python-dateutil==2.8.1
 pytz==2020.4
+requests==2.26.0
 six==1.15.0
 sqlparse==0.4.1
 text-unidecode==1.3
 traitlets==5.0.5
+urllib3==1.26.7
 wcwidth==0.2.5
